fixed project-section overflow

--- a/src/pages/projectPage/ProjectsSection.css
+++ b/src/pages/projectPage/ProjectsSection.css
@@ -1,4 +1,4 @@
- @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 body {
   margin: 0;
@@ -9,7 +9,8 @@ body {
 }
 
 .projects-section {
-  padding: 50px 20px;
+  /* padding: 50px 20px; */
+  padding: 50px 0;
   width: 100%;
   min-height: 50vh;
   display: flex;
@@ -128,4 +129,4 @@ body {
   .card-back p {
     font-size: 0.9rem;
   }
-} 
+}
